--- a/Cookie/Cookie/CKMainView.xib
+++ b/Cookie/Cookie/CKMainView.xib
@@ -41,7 +41,7 @@
 			<object class="NSCustomObject" id="1004">
 				<string key="NSClassName">NSApplication</string>
 			</object>
-			<object class="NSCustomObject" id="407698238">
+			<object class="NSCustomObject" id="620400911">
 				<string key="NSClassName">CKRecipeDataSource</string>
 			</object>
 			<object class="NSCustomView" id="1005">
@@ -58,7 +58,7 @@
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSLevelIndicatorCell" key="NSCell" id="699225752">
-							<int key="NSCellFlags">130560</int>
+							<int key="NSCellFlags">537001472</int>
 							<int key="NSCellFlags2">0</int>
 							<string key="NSCellIdentifier">_NS:9</string>
 							<reference key="NSControlView" ref="1041619795"/>
@@ -347,7 +347,6 @@
 								<string key="NSFrame">{{1, 119}, {238, 15}}</string>
 								<reference key="NSSuperview" ref="1012994419"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:60</string>
 								<int key="NSsFlags">1</int>
 								<reference key="NSTarget" ref="1012994419"/>
@@ -358,7 +357,7 @@
 						<string key="NSFrame">{{304, 20}, {276, 200}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="348572390"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="NSsFlags">133682</int>
 						<reference key="NSVScroller" ref="601891931"/>
@@ -474,7 +473,7 @@
 						<string key="NSFrame">{{20, 20}, {276, 200}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="126677277"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="NSsFlags">133682</int>
 						<reference key="NSVScroller" ref="984633807"/>
@@ -552,7 +551,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="930104668"/>
-						<reference key="destination" ref="407698238"/>
+						<reference key="destination" ref="620400911"/>
 					</object>
 					<int key="connectionID">392</int>
 				</object>
@@ -560,7 +559,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="930104668"/>
-						<reference key="destination" ref="407698238"/>
+						<reference key="destination" ref="620400911"/>
 					</object>
 					<int key="connectionID">393</int>
 				</object>
@@ -568,7 +567,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="14716946"/>
-						<reference key="destination" ref="407698238"/>
+						<reference key="destination" ref="620400911"/>
 					</object>
 					<int key="connectionID">394</int>
 				</object>
@@ -576,7 +575,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="14716946"/>
-						<reference key="destination" ref="407698238"/>
+						<reference key="destination" ref="620400911"/>
 					</object>
 					<int key="connectionID">395</int>
 				</object>
@@ -798,7 +797,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">391</int>
-						<reference key="object" ref="407698238"/>
+						<reference key="object" ref="620400911"/>
 						<reference key="parent" ref="0"/>
 					</object>
 				</array>
