--- a/Cookie/Cookie/CKRecipeView.xib
+++ b/Cookie/Cookie/CKRecipeView.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1938</string>
+			<string key="NS.object.0">2182</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSPopUpButtonCell</string>
@@ -55,10 +55,10 @@
 					<object class="NSPopUpButton" id="873888021">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{111, 376}, {46, 25}}</string>
+						<string key="NSFrame">{{99, 336}, {46, 25}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="229671765"/>
+						<reference key="NSNextKeyView" ref="953806113"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSPopUpButtonCell" key="NSCell" id="6076926">
 							<int key="NSCellFlags">-2080244160</int>
@@ -121,10 +121,10 @@
 									<object class="NSTextView" id="39099317">
 										<reference key="NSNextResponder" ref="545182991"/>
 										<int key="NSvFlags">2322</int>
-										<string key="NSFrameSize">{292, 14}</string>
+										<string key="NSFrameSize">{192, 14}</string>
 										<reference key="NSSuperview" ref="545182991"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="687844787"/>
+										<reference key="NSNextKeyView" ref="405647598"/>
 										<object class="NSTextContainer" key="NSTextContainer" id="1012905626">
 											<object class="NSLayoutManager" key="NSLayoutManager">
 												<object class="NSTextStorage" key="NSTextStorage">
@@ -140,7 +140,7 @@
 												<nil key="NSDelegate"/>
 											</object>
 											<reference key="NSTextView" ref="39099317"/>
-											<double key="NSWidth">292</double>
+											<double key="NSWidth">192</double>
 											<int key="NSTCFlags">1</int>
 										</object>
 										<object class="NSTextViewSharedData" key="NSSharedData">
@@ -184,14 +184,16 @@
 												<integer value="1" key="NSUnderline"/>
 											</dictionary>
 											<nil key="NSDefaultParagraphStyle"/>
+											<nil key="NSTextFinder"/>
+											<int key="NSPreferredTextFinderStyle">1</int>
 										</object>
 										<int key="NSTVFlags">6</int>
-										<string key="NSMaxSize">{463, 1e+07}</string>
-										<string key="NSMinize">{209, 10}</string>
+										<string key="NSMaxSize">{463, 10000000}</string>
+										<string key="NSMinize">{191, 0}</string>
 										<nil key="NSDelegate"/>
 									</object>
 								</array>
-								<string key="NSFrame">{{1, 1}, {307, 170}}</string>
+								<string key="NSFrame">{{1, 1}, {206, 238}}</string>
 								<reference key="NSSuperview" ref="628638031"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="39099317"/>
@@ -224,7 +226,7 @@
 								<string key="NSFrame">{{298, 1}, {15, 127}}</string>
 								<reference key="NSSuperview" ref="628638031"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="953806113"/>
+								<reference key="NSNextKeyView" ref="525350092"/>
 								<reference key="NSTarget" ref="628638031"/>
 								<string key="NSAction">_doScroller:</string>
 								<double key="NSCurValue">1</double>
@@ -244,11 +246,11 @@
 								<double key="NSPercent">0.94565218687057495</double>
 							</object>
 						</array>
-						<string key="NSFrame">{{111, 177}, {309, 172}}</string>
+						<string key="NSFrame">{{20, 20}, {208, 240}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="545182991"/>
-						<int key="NSsFlags">2</int>
+						<reference key="NSNextKeyView" ref="687844787"/>
+						<int key="NSsFlags">133122</int>
 						<reference key="NSVScroller" ref="405647598"/>
 						<reference key="NSHScroller" ref="687844787"/>
 						<reference key="NSContentView" ref="545182991"/>
@@ -264,26 +266,24 @@
 									<object class="NSTableView" id="269764288">
 										<reference key="NSNextResponder" ref="204067306"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrameSize">{309, 132}</string>
+										<string key="NSFrameSize">{208, 183}</string>
 										<reference key="NSSuperview" ref="204067306"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="830533791"/>
+										<reference key="NSNextKeyView" ref="957131987"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSTableHeaderView" key="NSHeaderView" id="412121074">
 											<reference key="NSNextResponder" ref="830533791"/>
 											<int key="NSvFlags">256</int>
-											<string key="NSFrameSize">{309, 17}</string>
+											<string key="NSFrameSize">{208, 17}</string>
 											<reference key="NSSuperview" ref="830533791"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="52899189"/>
+											<reference key="NSNextKeyView" ref="204067306"/>
 											<reference key="NSTableView" ref="269764288"/>
 										</object>
-										<object class="_NSCornerView" key="NSCornerView" id="52899189">
-											<reference key="NSNextResponder" ref="525350092"/>
+										<object class="_NSCornerView" key="NSCornerView">
+											<nil key="NSNextResponder"/>
 											<int key="NSvFlags">-2147483392</int>
 											<string key="NSFrame">{{224, 0}, {16, 17}}</string>
-											<reference key="NSSuperview" ref="525350092"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="204067306"/>
 										</object>
 										<array class="NSMutableArray" key="NSTableColumns">
@@ -338,7 +338,7 @@
 											</object>
 											<object class="NSTableColumn" id="953194628">
 												<string key="NSIdentifier">measure</string>
-												<double key="NSWidth">238</double>
+												<double key="NSWidth">137</double>
 												<double key="NSMinWidth">40</double>
 												<double key="NSMaxWidth">1000</double>
 												<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -388,9 +388,10 @@
 										<int key="NSDraggingSourceMaskForNonLocal">0</int>
 										<bool key="NSAllowsTypeSelect">YES</bool>
 										<int key="NSTableViewDraggingDestinationStyle">0</int>
+										<int key="NSTableViewGroupRowStyle">1</int>
 									</object>
 								</array>
-								<string key="NSFrame">{{0, 17}, {309, 132}}</string>
+								<string key="NSFrame">{{0, 17}, {208, 183}}</string>
 								<reference key="NSSuperview" ref="525350092"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="269764288"/>
@@ -428,7 +429,7 @@
 								<array class="NSMutableArray" key="NSSubviews">
 									<reference ref="412121074"/>
 								</array>
-								<string key="NSFrameSize">{309, 17}</string>
+								<string key="NSFrameSize">{208, 17}</string>
 								<reference key="NSSuperview" ref="525350092"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="412121074"/>
@@ -436,18 +437,16 @@
 								<reference key="NSBGColor" ref="583840319"/>
 								<int key="NScvFlags">4</int>
 							</object>
-							<reference ref="52899189"/>
 						</array>
-						<string key="NSFrame">{{111, 20}, {309, 149}}</string>
+						<string key="NSFrame">{{247, 20}, {208, 200}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="204067306"/>
-						<int key="NSsFlags">0</int>
+						<reference key="NSNextKeyView" ref="830533791"/>
+						<int key="NSsFlags">133120</int>
 						<reference key="NSVScroller" ref="957131987"/>
 						<reference key="NSHScroller" ref="1022595325"/>
 						<reference key="NSContentView" ref="204067306"/>
 						<reference key="NSHeaderClipView" ref="830533791"/>
-						<reference key="NSCornerView" ref="52899189"/>
 						<bytes key="NSScrollAmts">QSAAAEEgAABBmAAAQZgAAA</bytes>
 					</object>
 					<object class="NSImageView" id="953806113">
@@ -461,10 +460,10 @@
 							<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
 							<string>NeXT TIFF v4.0 pasteboard type</string>
 						</set>
-						<string key="NSFrame">{{442, 320}, {141, 120}}</string>
+						<string key="NSFrame">{{377, 277}, {206, 206}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="340342400"/>
+						<reference key="NSNextKeyView" ref="229671765"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="860797584">
 							<int key="NSCellFlags">130560</int>
@@ -483,13 +482,13 @@
 					<object class="NSLevelIndicator" id="425816663">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{510, 300}, {132, 13}}</string>
+						<string key="NSFrame">{{56, 376}, {132, 13}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="560035797"/>
+						<reference key="NSNextKeyView" ref="599132116"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSLevelIndicatorCell" key="NSCell" id="272850329">
-							<int key="NSCellFlags">130560</int>
+							<int key="NSCellFlags">270663168</int>
 							<int key="NSCellFlags2">0</int>
 							<reference key="NSControlView" ref="425816663"/>
 							<double key="NSValue">5</double>
@@ -502,7 +501,7 @@
 					<object class="NSTextField" id="340342400">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{442, 298}, {34, 17}}</string>
+						<string key="NSFrame">{{17, 374}, {34, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="425816663"/>
@@ -525,10 +524,10 @@
 					<object class="NSTextField" id="560035797">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{17, 152}, {76, 17}}</string>
+						<string key="NSFrame">{{313, 228}, {76, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="525350092"/>
+						<reference key="NSNextKeyView" ref="628638031"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="542611619">
 							<int key="NSCellFlags">67239424</int>
@@ -543,10 +542,10 @@
 					<object class="NSTextField" id="229671765">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{17, 332}, {79, 17}}</string>
+						<string key="NSFrame">{{85, 268}, {79, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="628638031"/>
+						<reference key="NSNextKeyView" ref="560035797"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="736160900">
 							<int key="NSCellFlags">67239424</int>
@@ -565,7 +564,7 @@
 					<object class="NSTextField" id="599132116">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{17, 384}, {61, 17}}</string>
+						<string key="NSFrame">{{17, 344}, {61, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="873888021"/>
@@ -583,10 +582,10 @@
 					<object class="NSTextField" id="775359202">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{31, 419}, {65, 18}}</string>
+						<string key="NSFrame">{{17, 407}, {65, 18}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="599132116"/>
+						<reference key="NSNextKeyView" ref="374938973"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="683262710">
 							<int key="NSCellFlags">67239424</int>
@@ -605,10 +604,10 @@
 					<object class="NSTextField" id="479196404">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{17, 461}, {566, 19}}</string>
+						<string key="NSFrame">{{17, 461}, {358, 19}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="374938973"/>
+						<reference key="NSNextKeyView" ref="775359202"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="900288065">
 							<int key="NSCellFlags">67239424</int>
@@ -638,7 +637,7 @@
 						<string key="NSFrame">{{-137, 302}, {120, 120}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="775359202"/>
+						<reference key="NSNextKeyView" ref="340342400"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="389460166">
 							<int key="NSCellFlags">130560</int>
@@ -749,6 +748,14 @@
 					<int key="connectionID">70</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">ratingChanged:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="425816663"/>
+					</object>
+					<int key="connectionID">72</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="269764288"/>
@@ -796,17 +803,17 @@
 						<reference key="object" ref="1005"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="374938973"/>
-							<reference ref="479196404"/>
-							<reference ref="599132116"/>
-							<reference ref="229671765"/>
 							<reference ref="865098734"/>
 							<reference ref="953806113"/>
-							<reference ref="525350092"/>
-							<reference ref="560035797"/>
+							<reference ref="479196404"/>
 							<reference ref="628638031"/>
+							<reference ref="525350092"/>
+							<reference ref="229671765"/>
+							<reference ref="560035797"/>
+							<reference ref="775359202"/>
+							<reference ref="599132116"/>
 							<reference ref="340342400"/>
 							<reference ref="425816663"/>
-							<reference ref="775359202"/>
 							<reference ref="873888021"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -1097,24 +1104,27 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">70</int>
+			<int key="maxID">72</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">CKRecipeViewController</string>
 					<string key="superclassName">NSViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">editAction:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">editAction:</string>
-						<object class="IBActionInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="editAction:">id</string>
+						<string key="ratingChanged:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="editAction:">
 							<string key="name">editAction:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-					</object>
+						<object class="IBActionInfo" key="ratingChanged:">
+							<string key="name">ratingChanged:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="editButton">NSButton</string>
 						<string key="guestSelector">NSPopUpButton</string>
