--- a/Cookie/Cookie/CKRecipeView.xib
+++ b/Cookie/Cookie/CKRecipeView.xib
@@ -58,7 +58,7 @@
 						<string key="NSFrame">{{99, 336}, {46, 25}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="953806113"/>
+						<reference key="NSNextKeyView" ref="229671765"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSPopUpButtonCell" key="NSCell" id="6076926">
 							<int key="NSCellFlags">-2080244160</int>
@@ -95,6 +95,7 @@
 						<string key="NSFrame">{{504, 12}, {82, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="291571880">
 							<int key="NSCellFlags">67239424</int>
@@ -226,7 +227,7 @@
 								<string key="NSFrame">{{298, 1}, {15, 127}}</string>
 								<reference key="NSSuperview" ref="628638031"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="525350092"/>
+								<reference key="NSNextKeyView" ref="560035797"/>
 								<reference key="NSTarget" ref="628638031"/>
 								<string key="NSAction">_doScroller:</string>
 								<double key="NSCurValue">1</double>
@@ -463,7 +464,7 @@
 						<string key="NSFrame">{{377, 277}, {206, 206}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="229671765"/>
+						<reference key="NSNextKeyView" ref="628638031"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="860797584">
 							<int key="NSCellFlags">130560</int>
@@ -527,7 +528,7 @@
 						<string key="NSFrame">{{313, 228}, {76, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="628638031"/>
+						<reference key="NSNextKeyView" ref="525350092"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="542611619">
 							<int key="NSCellFlags">67239424</int>
@@ -545,7 +546,7 @@
 						<string key="NSFrame">{{85, 268}, {79, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="560035797"/>
+						<reference key="NSNextKeyView" ref="953806113"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="736160900">
 							<int key="NSCellFlags">67239424</int>
@@ -585,7 +586,7 @@
 						<string key="NSFrame">{{17, 407}, {65, 18}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="374938973"/>
+						<reference key="NSNextKeyView" ref="340342400"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="683262710">
 							<int key="NSCellFlags">67239424</int>
@@ -607,7 +608,7 @@
 						<string key="NSFrame">{{17, 461}, {358, 19}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="775359202"/>
+						<reference key="NSNextKeyView" ref="374938973"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="900288065">
 							<int key="NSCellFlags">67239424</int>
@@ -637,7 +638,7 @@
 						<string key="NSFrame">{{-137, 302}, {120, 120}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="340342400"/>
+						<reference key="NSNextKeyView" ref="775359202"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="389460166">
 							<int key="NSCellFlags">130560</int>
@@ -754,6 +755,14 @@
 						<reference key="destination" ref="425816663"/>
 					</object>
 					<int key="connectionID">72</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">guestNumberChanged:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="873888021"/>
+					</object>
+					<int key="connectionID">73</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -1104,7 +1113,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">72</int>
+			<int key="maxID">73</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1113,11 +1122,16 @@
 					<string key="superclassName">NSViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="editAction:">id</string>
+						<string key="guestNumberChanged:">id</string>
 						<string key="ratingChanged:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="editAction:">
 							<string key="name">editAction:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="guestNumberChanged:">
+							<string key="name">guestNumberChanged:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="ratingChanged:">
